--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "repository": "https://github.com/nautes-labs/website",
   "scripts": {
     "dev": "vuepress dev src",
-    "build": "vuepress build src",
+    "build": "vuepress build src"
   },
   "license": "MIT",
   "dependencies": {
